api/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: shorturl-service
spec:
  selector:
    app: shorturl-api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5000
